refactor(接口测试执行): 执行附件本地缓存，避免每次执行都下载文件性能开销比较大
--story=1011099 --user=宋天阳
执行附件本地缓存，避免每次执行都下载文件性能开销比较大
https://www.tapd.cn/55049933/s/1332544